tests/ui/nll/issue-97997.stderr
error: higher-ranked subtype error
  --> $DIR/issue-97997.rs:13:5
   |
LL |     <fn(&u8) as Foo>::ASSOC;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-97997.rs:13:5
   |
LL |     <fn(&u8) as Foo>::ASSOC;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

